--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,134 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: 106 42% 98%;
+    --foreground: 106 57% 3%;
+    --muted: 76 12% 85%;
+    --muted-foreground: 76 14% 30%;
+    --popover: 106 42% 98%;
+    --popover-foreground: 106 57% 3%;
+    --card: 106 42% 97%;
+    --card-foreground: 106 57% 2%;
+    --border: 106 9% 89%;
+    --input: 106 9% 89%;
+    --primary: 106 41% 51%;
+    --primary-foreground: 106 41% 11%;
+    --secondary: 76 41% 51%;
+    --secondary-foreground: 76 41% 11%;
+    --accent: 136 41% 51%;
+    --accent-foreground: 136 41% 11%;
+    --destructive: 21 96% 43%;
+    --destructive-foreground: 0 0% 100%;
+    --success: 132 56% 50%;
+    --success-foreground: 132 30% 95%;
+    --ring: 106 41% 51%;
+    --chart-1: 106 41% 51%;
+    --chart-2: 76 41% 51%;
+    --chart-3: 136 41% 51%;
+    --chart-4: 76 41% 54%;
+    --chart-5: 106 44% 51%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 106 47% 2%;
+    --foreground: 106 31% 100%;
+    --muted: 76 12% 15%;
+    --muted-foreground: 76 14% 70%;
+    --popover: 106 47% 2%;
+    --popover-foreground: 106 31% 100%;
+    --card: 106 47% 3%;
+    --card-foreground: 0 0% 100%;
+    --border: 106 9% 10%;
+    --input: 106 9% 10%;
+    --primary: 106 41% 51%;
+    --primary-foreground: 106 41% 11%;
+    --secondary: 76 41% 51%;
+    --secondary-foreground: 76 41% 11%;
+    --accent: 136 41% 51%;
+    --accent-foreground: 136 41% 11%;
+    --destructive: 21 96% 58%;
+    --destructive-foreground: 0 0% 0%;
+    --ring: 106 41% 51%;
+    --chart-1: 106 41% 51%;
+    --chart-2: 76 41% 51%;
+    --chart-3: 136 41% 51%;
+    --chart-4: 76 41% 54%;
+    --chart-5: 106 44% 51%;
   }
 }
 
+
+/* @layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 142.1 76.2% 36.3%;
+    --primary-foreground: 355.7 100% 97.3%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 142.1 76.2% 36.3%;
+    --radius: 1rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
+
+  .dark {
+    --background: 20 14.3% 4.1%;
+    --foreground: 0 0% 95%;
+    --card: 24 9.8% 10%;
+    --card-foreground: 0 0% 95%;
+    --popover: 0 0% 9%;
+    --popover-foreground: 0 0% 95%;
+    --primary: 142.1 70.6% 45.3%;
+    --primary-foreground: 144.9 80.4% 10%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 15%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 12 6.5% 15.1%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 85.7% 97.3%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 142.4 71.8% 29.2%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
+} */
+
+
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
